wrong color hex fix

--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -237,7 +237,7 @@ section {
     margin-right: 1.5em; }
 
 .btn {
-  background: #fffff;
+  background: #ffffff;
   border: 1px solid #333;
   border-radius: 4px;
   cursor: pointer;
