--- a/styles/index.scss
+++ b/styles/index.scss
@@ -304,7 +304,7 @@ section {
 }
 
 .btn {
-  background: #fffff;
+  background: #ffffff;
   border: 1px solid #333;
   border-radius: 4px;
   cursor: pointer;
